--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,3 +51,15 @@
    display: fixed;
    z-index: 10000 !important;
 }
+
+.radiobtn_div{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+.first_checkbox{
+  background-color: #8884d8 !important;
+}
